--- a/telegram-console-sender/package.json
+++ b/telegram-console-sender/package.json
@@ -16,5 +16,8 @@
     "commander": "^10.0.1",
     "dotenv": "^16.0.3",
     "node-telegram-bot-api": "^0.61.0"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.61.6"
   }
 }
