--- a/telegram-echo/package.json
+++ b/telegram-echo/package.json
@@ -16,5 +16,8 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "node-telegram-bot-api": "^0.61.0"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.61.6"
   }
 }
