CHANGED: - Updated programs to use TypeScript - Added nodemon config to several programs - Updated .gitignore in several programs - Removed express from telegram-weather

--- a/primitive-db/package.json
+++ b/primitive-db/package.json
@@ -5,14 +5,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "nodemon",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.0.4"
+  },
   "dependencies": {
-    "@inquirer/prompts": "^1.0.1"
+    "@inquirer/prompts": "^1.0.3",
+    "@types/node": "^20.1.0"
   }
 }
