--- a/telegram-weather/fly.toml
+++ b/telegram-weather/fly.toml
@@ -11,3 +11,31 @@ primary_region = "ord"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
+
+[[services]]
+  internal_port = 3000
+  protocol = "tcp"
+
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = "80"
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = "443"
+
+  [[services.tcp_checks]]
+    grace_period = "1m"
+    interval = "15s"
+    timeout = "5s"
+
+  [[services.http_checks]]
+    endpoint = "/health"
+    interval = "15s"
+    timeout = "5s"
+    grace_period = "1m"
+    tls_skip_verify = false
