--- a/telegram-weather/package.json
+++ b/telegram-weather/package.json
@@ -1,13 +1,13 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "telegram-weather",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/index.ts",
+    "dev": "nodemon",
+    "start": "npm run build && node dist/index.js",
     "build": "tsc",
-    "start": "npm run build && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
     "@types/node-telegram-bot-api": "^0.61.6",
     "ts-node": "^10.9.1",
