--- a/crypto-api/package.json
+++ b/crypto-api/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
