--- a/crypto-api/package.json
+++ b/crypto-api/package.json
@@ -17,12 +17,15 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
+    "drizzle-kit": "^0.18.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "drizzle-orm": "^0.26.0",
+    "express": "^4.18.2",
+    "mysql2": "^3.3.1"
   }
 }
