--- a/crypto-api/package.json
+++ b/crypto-api/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
+    "generate": "drizzle-kit generate:mysql",
+    "push": "drizzle-kit push:mysql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,14 +19,14 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
-    "drizzle-kit": "^0.18.0",
+    "drizzle-kit": "^0.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
-    "drizzle-orm": "^0.26.0",
+    "drizzle-orm": "^0.26.5",
     "express": "^4.18.2",
     "mysql2": "^3.3.1"
   }
