--- a/crypto-api/tsconfig.json
+++ b/crypto-api/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": false,
     "skipLibCheck": true,
     "strict": true,
-    "noImplicitAny": true,
+    "noImplicitAny": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "drizzle.config.ts"],
+  "exclude": ["tsconfig.json"]
 }
