CHANGED: - Moved most logic to app.ts - Updated index.ts with initialization of the app

--- a/crypto-api/package.json
+++ b/crypto-api/package.json
@@ -1,13 +1,13 @@
 {
   "type": "module",
-  "name": "json-api",
+  "name": "crypto-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "generate": "drizzle-kit generate:mysql",
     "push": "drizzle-kit push:mysql",
     "test": "echo \"Error: no test specified\" && exit 1"
