CHANGED: - Updated Crypto API controller, .env example

--- a/crypto-api/.env.example
+++ b/crypto-api/.env.example
@@ -1,5 +1,15 @@
 SERVER_PORT=
 
-MONGODB_URL=
-MONGO_DB_NAME=
-MONGO_DB_USER_COLLECTION=
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+
+COINMARKETCAP_API_URL=
+COINMARKETCAP_API_KEY=
+
+COINBASE_API_URL=
+
+COINSTATS_API_URL=
+
+KUCOIN_API_URL=
