--- a/primitive-db/package.json
+++ b/primitive-db/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^1.0.3",
-    "@types/node": "^20.1.0"
+    "@types/node": "^20.1.0",
+    "nodemon": "^3.0.3"
   }
 }
